# Cost-of-Pass

./: .gitignore  README.md  pyproject.toml
cost_of_pass/: __init__.py
cost_of_pass/analysis/: analysis.ipynb
cost_of_pass/evaluation/: __init__.py  estimate.py  evaluate.py  recording.py  utils.py
cost_of_pass/evaluation/failed_to_save/: README.md
cost_of_pass/metrics/: __init__.py  base.py  core_metrics.py  math_metrics.py  multi_choice_metrics.py
cost_of_pass/models/: __init__.py  base.py  litellm.py
cost_of_pass/models/cost_data/: litellm.json
cost_of_pass/tasks/: AIME_2024.py  GPQA_Diamond.py  TwoDigitAddition.py  __init__.py  base.py  bbq.py  gsm8k.py  math500.py
cost_of_pass/tasks/data/Basic_Two_Digit_Addition/: cache-be733fc0222959f9.arrow  data-00000-of-00001.arrow  state.json
cost_of_pass/testtime/: __init__.py  base.py  basic.py
